gcc/testsuite/g++.old-deja/g++.mike/ns3.C
// { dg-do assemble  }
int i;		// { dg-message "" } 

namespace i {	// { dg-error "" } 
}
